# connectome_analysis

./: .gitignore  .gitmodules  404.html  LICENCE  README.md  README.rtf  build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/actions/python-poetry-env/: action.yml
.github/workflows/: draft_release.yml  test.yml
analysis/network_science/: README.rtf
analysis/topology/: README.rtf  betti_counts.py  node_participation.py  simplex_counts.py
analysis_configs/: README.md  cn_bias_for_unweighted_matrix.json
data_analysis/SSCx_modelling/: model_building_config_order2_midrange.json  run_SSCx_model_building_order2_local.py  run_SSCx_model_building_order2_local_per_pathway.py  run_SSCx_model_building_order2_midrange.py  run_SSCx_model_building_order2_midrange_per_pathway.py  run_SSCx_model_building_order2_midrange_per_pathway.sh
data_analysis/SSCx_modelling/modelling/tables/: SSCx_model_params_order-2_midrange.h5
data_analysis/analysis_configs/: README.md  cn_bias_for_weighted_matrix.json  cn_bias_per_mtype_for_unweighted_matrix.json  cn_bias_per_mtype_for_weighted_matrix.json  cn_counts.json  cn_counts_per_mtype.json  connection_prob_for_pathways.json  simple_example.py
data_analysis/pokorny/: SSCx_AtlasFlatmap_Interpolation.ipynb  SSCx_Model_building_per_pathway.ipynb  SSCx_model_coefficients.ipynb  SSCx_prepare_midrange_coords.ipynb  model_building_batch.sh  model_building_config_order2_local.json  model_building_order2.sh  run_SSCx_model_building_order2_local.py  run_SSCx_model_building_order2_local.sh  run_SSCx_model_building_order2_local_per_pathway.sh  run_SSCx_model_building_order2_midrange.py  run_SSCx_model_building_order2_midrange.sh  topotap_DD2check.ipynb
data_analysis/pokorny/modelling/tables/: SSCx_model_params_order-2_local.h5
docs/: api_docs.md  index.md  modelling.md  network.md  network_classic.md  network_local.md  network_stats.md  network_topology.md  randomization.md
documentation/notebooks/: adj_r0c10.npz  modelling.ipynb  nodes_r0c10.h5  randomization.ipynb
modelling/: index.html
network/: index.html
network_classic/: index.html
network_local/: index.html
network_stats/: index.html
network_topology/: index.html
randomization/: ER_shuffle.py  README.rtf  index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/modelling/: index.html
site/network/: index.html
site/randomization/: index.html
site/search/: search_index.json
src/connalysis/: __init__.py
src/connalysis/modelling/: __init__.py  modelling.py
src/connalysis/network/: __init__.py  classic.py  local.py  network.py  stats.py  topology.py
src/connalysis/randomization/: __init__.py  rand_utils.py  randomization.py
src/generate_model/: CMakeLists.txt  setup.py
src/generate_model/generateModel/: __init__.py  generate_model.cpp  wrapper_bindings.cpp
tests/: test_imports.py  test_network_topology.py
tutorials/: TDA_unweighted_networks.ipynb  counting_triads.ipynb  modelling.ipynb  plot_simplices.ipynb  randomization.ipynb  run_batch_modelling.json  run_batch_modelling.py  run_batch_modelling.sh
tutorials/.ipynb_checkpoints/: plot_triads-checkpoint.ipynb
