[tool.poetry]
name = "connectome_analysis"
version = "0.0.1"
description = "Functions for network analysis of graphs coming brain models"
authors = [
    "Daniela Egas Santander <daniela.egassantander@epfl.ch>",
    "Other authors",
]
license = "TO BE DECIDED"
readme = "README.md"

documentation = "https://danielaegassan.github.io/connectome_analysis"
homepage = "https://danielaegassan.github.io/connectome_analysis"
repository = "https://github.com/danielaegassan/connectome_analysis"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "connalysis", from = "src" },
    { include = "generateModel", from = "src/generate_model" },
    # { include = "FLAGSER COUNT PACKAGE DIR NAME", from = "externals/FLAGSER COUNT DIR NAME" },
]

[tool.poetry.dependencies]
python = ">=3.7.1, <4.0"
numpy = "*"
pandas = "*"
scipy = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
black = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov template \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]
